--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,13 +7,15 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%= javascript_importmap_tags %>
   </head>
 
   <body>
     <% flash.each do |name, msg| %>
       <%= msg %>
+      <p>test</p>
     <% end %>
-    
+
     <%= yield %>
   </body>
 </html>
