--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,28 +1,7 @@
 <h1>Edit article</h1>
 
-<% if @article.errors.any? %>
-  <h2>The folloving errors preventes the article form being saved!</h2>
-  <% @article.errors.full_messages.each do |msg| %>
-    <ul>
-      <li><%= msg %></li>
-    </ul>
-  <% end %>
-<% end %>
+<%= render 'error_message' %>
 
-<%= form_with(model: @article, local: true) do |f| %>
-  <p> 
-      <%= f.label :title %> <br>
-      <%= f.text_field :title %>
-  </p>
-
-  <p>
-      <%= f.label :description %> <br>
-      <%= f.text_area :description %>
-  </p>
-
-  <p>
-      <%= f.submit %>
-  </p>
-<% end %>
+<%= render 'form' %>
 
 <p><%= link_to 'Cancel and return to articles listing', article_path %></p>
