--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,30 +1,7 @@
 <h1>Create a new article</h1>
 
-<% if @article.errors.any? %>
-  <h2>The folloving errors preventes the article form being saved!</h2>
-    <h2><%= pluralize(@article.errors.count, "error") %> prevented this record from being saved:</h2>
+<%= render 'error_message' %>
 
-  <% @article.errors.full_messages.each do |msg| %>
-    <ul>
-      <li><%= msg %></li>
-    </ul>
-  <% end %>
-<% end %>
-
-<%= form_with scope: :article, url: articles_path, local: true do |f| %>
-  <p> 
-      <%= f.label :title %> <br>
-      <%= f.text_field :title %>
-  </p>
-
-  <p>
-      <%= f.label :description %> <br>
-      <%= f.text_area :description %>
-  </p>
-
-  <p>
-      <%= f.submit %>
-  </p>
-<% end %>
+<%= render 'form' %>
 
 <p><%= link_to 'Return to articles listing', articles_path %></p>
