--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,7 @@
   </head>
 
   <body>
-    <% flash.each do |name, msg| %>
-      <%= msg %>
-      <p>test</p>
-    <% end %>
+    <%= render 'layouts/messages' %>
 
     <%= yield %>
   </body>
