--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,7 +1,3 @@
-<h1>Edit article</h1>
-
-<%= render 'error_message' %>
-
-<%= render 'form' %>
-
-<p><%= link_to 'Cancel and return to articles listing', article_path %></p>
+  <h1 class="text-center mt-4">Edit article details</h1>
+  <%= render 'shared/error_message' %>
+  <%= render 'form' %>
