--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,7 +1,4 @@
-<h1>Create a new article</h1>
+  <h1 class="text-center mt-4">Create a new article</h1>
+  <%= render 'form' %>
 
-<%= render 'error_message' %>
 
-<%= render 'form' %>
-
-<p><%= link_to 'Return to articles listing', articles_path %></p>
