--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,21 @@
-hello
+<!-- Jumbotron -->
+  <div class="container" id="home-container">
+    <div class="p-4 shadow-4 rounded-3 text-center text-white jumbotron" >
+      <h2>Alpha Blog</h2>
+      <p>
+        This is a simple hero unit, a simple jumbotron-style component for calling extra
+        attention to featured content or information.
+      </p>
+
+      <hr class="my-4" />
+
+      <p>
+        It uses utility classes for typography and spacing to space content out within the
+        larger container.
+      </p>
+      <button type="button" class="btn btn-success btn-jumbotron">
+        Sign up
+      </button>
+    </div>
+  </div>
+<!-- Jumbotron -->
