--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,7 +4,7 @@
         <div class="col-8 mt-4">
           <div class="card text-center shadow mb-5 bg-body rounded">
             <div class="card-header fst-italic">
-              by Srdjan Margetic
+            by <%= @article.user.username if @article.user %>
             </div>
             <div class="card-body">
               <div class="card-text text-left"><%= simple_format(@article.description) %></div>
@@ -18,7 +18,5 @@
         </div>
       </div>
   </div>
-
-<p><%= link_to 'Create new article', new_article_path %></p>
 
 
