Add user create action

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,9 +13,7 @@
         It uses utility classes for typography and spacing to space content out within the
         larger container.
       </p>
-      <button type="button" class="btn btn-success btn-jumbotron">
-        Sign up
-      </button>
+      <%= link_to "Signup", signup_path, class: "btn btn-success btn-jumbotron" %>
     </div>
   </div>
 <!-- Jumbotron -->
