--- a/app/views/shared/_error_message.html.erb
+++ b/app/views/shared/_error_message.html.erb
@@ -1,6 +1,6 @@
 <% if obj.errors.any? %>
   <div class="alert alert-dangers alert-dismissible fade show" role="alert">
-    <h4 class="alert-heading">The folloving errors preventes the article form being saved!</h4>
+    <h4 class="alert-heading">The folloving errors preventes the <$= obj.class.name.downcase %> form being saved!</h4>
     <% obj.errors.full_messages.each do |msg| %>
       <ul>
         <li><%= msg %></li>
