--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -14,7 +14,9 @@
             Articles
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <%= link_to "Create Article", new_article_path, class:"dropdown-item" %>
+            <% if logged_in? %>
+              <%= link_to "Create Article", new_article_path, class:"dropdown-item" %>
+            <% end %>
             <%= link_to "View articles", articles_path, class:"dropdown-item" %>
             
             <li><hr class="dropdown-divider"></li>
@@ -26,8 +28,17 @@
           <li class="nav-item">
             <%= link_to 'Logout', logout_path, class: "nav-link",  data: { turbo_method: :delete } %>        
           </li>
-          <li class="nav-item">
-            <%= link_to current_user.username, user_path(current_user), class: "nav-link" %>        
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Profile [<%= current_user.username %>]
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <%= link_to "View your profile", user_path(current_user), class:"dropdown-item" %>
+              <%= link_to "Edit your profile", edit_user_path(current_user), class:"dropdown-item" %>
+              
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
           </li>
         <% else %>
           <li class="nav-item">
